// |_____/ \__|\__, |_|_|_| |_|\__, |_|  |_|  \__,_|_| |_| |_|\___| \_/\_/ \___/|_|  |_|\_\
//              __/ |           __/ |                                                      
//             |___/           |___/                                                       
//
// RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES

Version of 02-05-2021
---------------------
1) Release version 1.0.1
2) StyleLibrary renamed to StyleFramework (libraries and directories)

Version of 02-04-2021
---------------------
1) Release version 1.0.0
2) Build all platforms/configurations in the 'lib' directory. Tested all builds work
3) Automatic linking through "StyleFramework.h". Just include in your 'stdafx.h' file
4) Full batch build of all 4 Debug/Release/x86/x64 builds work.

Version of 28 march 2021
------------------------
1) Fixed StyleTabCtrl to work directly with inserted dialogs
2) Added SelectTab(n) method to StyleTabCtrl.
   Eliminating the need for a OnTcnSelchangeTabs method in your dialog

Version of 13 march 2021
------------------------
1) Controls can now be hidden with "ShowWindow(SW_HIDE)" or shown again with "SW_SHOW"
2) Clicking on the title bar will bring the window back to the foreground.
3) Mousewheel correction for various views

Version of 14 november 2020
---------------------------
1) Added DDV functions for most controls
2) Added a general StyleFramework.h header
3) Re-wrote the StyleComboBox control it now has the following abilties
   - Multi-selection
   - Enable/disabled window state and still show the list
   - Can scroll outside of the application window (!)
4) Added the "StyleToast" class
5) Added the "StyleSpinButtonCtrl" class
6) Removed all "Init()" functions. The initialisation is done in PreSubClassWindow
   or in the InitSkin() function inside the DDX_Control function
7) Removed the IMGButton class. All buttons are now "StyleButton"s