@@ -63,11 +63,10 @@ MyFrameDlg6::SetupDynamicLayout()
   manager.AssertValid();
 #endif
 
-  HWND edit  = m_edit .GetSkin()->GetSafeHwnd();
   HWND list1 = m_list1.GetSkin()->GetSafeHwnd();
   HWND list2 = m_list2.GetSkin()->GetSafeHwnd();
 
-  manager.AddItem(edit,          manager.MoveNone(),                          manager.SizeHorizontal(100));
+  manager.AddItem(m_edit,        manager.MoveNone(),                          manager.SizeHorizontal(100));
   manager.AddItem(m_buttonAdd,   manager.MoveHorizontal(100),                 manager.SizeNone());
   manager.AddItem(list1,         manager.MoveNone(),                          manager.SizeHorizontalAndVertical(50,100));
   manager.AddItem(list2,         manager.MoveHorizontal(50),                  manager.SizeHorizontalAndVertical(50,100));
